--- a/.hintrc
+++ b/.hintrc
@@ -28,7 +28,8 @@
     "axe/forms": [
       "default",
       {
-        "label": "off"
+        "label": "off",
+        "select-name": "off"
       }
     ],
     "axe/text-alternatives": [
