--- a/.hintrc
+++ b/.hintrc
@@ -35,7 +35,8 @@
     "axe/text-alternatives": [
       "default",
       {
-        "image-alt": "off"
+        "image-alt": "off",
+        "frame-title": "off"
       }
     ],
     "compat-api/css": [
